[wix-storybook-utils] inline roboto font && fix table cells alignment (#2054)
* table - align table to fix the width

* Inline roboto font and remove required field from the table

--- a/packages/wix-storybook-utils/src/AutoDocs/styles.scss
+++ b/packages/wix-storybook-utils/src/AutoDocs/styles.scss
@@ -15,6 +15,8 @@
 
 .table table {
   display: table;
+  table-layout: fixed;
+  width: 100%;
 }
 
 .table thead {
@@ -37,12 +39,20 @@
 
 .table table tr th:first-child,
 .table table tr td:first-child {
+  width: 20%;
   padding: 16px 18px 16px 30px;
 }
+
+.table table tr th:nth-child(2),
+.table table tr td:nth-child(2) {
+  width: 20%;
+}
+
 
 .table table tr th:last-child,
 .table table tr td:last-child {
   padding: 16px 30px 16px 18px;
+  width: 500px;
 }
 
 .table table tr th,
@@ -88,8 +98,6 @@
   @include fontWeight(medium);
   font-size: 16px;
   color: $D20;
-  min-width: 500px;
-  max-width: 800px;
 }
 
 .table table tbody .description div {
